--- a/ST10083735_PROG6221_POE/ST10083735_PROG6221_POE.csproj
+++ b/ST10083735_PROG6221_POE/ST10083735_PROG6221_POE.csproj
@@ -10,8 +10,15 @@
     <None Remove="bell-icon.png" />
     <None Remove="coin-icon.png" />
     <None Remove="Currency_Flatline.png" />
+    <None Remove="edit-icon.png" />
     <None Remove="exit-icon.png" />
+    <None Remove="fuel-icon.png" />
+    <None Remove="groceries-icon.png" />
     <None Remove="home-icon.png" />
+    <None Remove="lights-icon.png" />
+    <None Remove="next-icon.png" />
+    <None Remove="notification-icon.png" />
+    <None Remove="phone-icon.png" />
     <None Remove="search-icon.png" />
   </ItemGroup>
 
@@ -19,8 +26,15 @@
     <Resource Include="bell-icon.png" />
     <Resource Include="coin-icon.png" />
     <Resource Include="Currency_Flatline.png" />
+    <Resource Include="edit-icon.png" />
     <Resource Include="exit-icon.png" />
+    <Resource Include="fuel-icon.png" />
+    <Resource Include="groceries-icon.png" />
     <Resource Include="home-icon.png" />
+    <Resource Include="lights-icon.png" />
+    <Resource Include="next-icon.png" />
+    <Resource Include="notification-icon.png" />
+    <Resource Include="phone-icon.png" />
     <Resource Include="search-icon.png" />
   </ItemGroup>
 
