Completed migration from WinForms to WPF. Need to fix RichTextBox display.

--- a/ST10083735_PROG6221_POE/ST10083735_PROG6221_POE.csproj
+++ b/ST10083735_PROG6221_POE/ST10083735_PROG6221_POE.csproj
@@ -22,6 +22,7 @@
     <None Remove="phone-icon.png" />
     <None Remove="rent-icon.png" />
     <None Remove="search-icon.png" />
+    <None Remove="VehicleImg.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -44,6 +45,7 @@
     <Resource Include="phone-icon.png" />
     <Resource Include="rent-icon.png" />
     <Resource Include="search-icon.png" />
+    <Resource Include="VehicleImg.png" />
   </ItemGroup>
 
 </Project>
