--- a/ST10083735_PROG6221_POE/ST10083735_PROG6221_POE.csproj
+++ b/ST10083735_PROG6221_POE/ST10083735_PROG6221_POE.csproj
@@ -26,6 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Infragistics.WPF.Charts.Trial" Version="22.1.40" />
     <PackageReference Include="Syncfusion.Shared.WPF" Version="20.1.0.61" />
   </ItemGroup>
 
