--- a/ST10083735_PROG6221_POE/ST10083735_PROG6221_POE.csproj
+++ b/ST10083735_PROG6221_POE/ST10083735_PROG6221_POE.csproj
@@ -15,6 +15,7 @@
     <None Remove="exit-icon.png" />
     <None Remove="expenses.png" />
     <None Remove="fuel-icon.png" />
+    <None Remove="graph.png" />
     <None Remove="groceries-icon.png" />
     <None Remove="home-icon.png" />
     <None Remove="lights-icon.png" />
@@ -29,7 +30,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="DocumentFormat.OpenXml" Version="2.16.0" />
+    <PackageReference Include="Syncfusion.SfChart.WPF" Version="20.1.0.61" />
+    <PackageReference Include="Syncfusion.SfSunburstChart.WPF" Version="20.1.0.61" />
     <PackageReference Include="Syncfusion.Shared.WPF" Version="20.1.0.61" />
   </ItemGroup>
 
@@ -42,6 +44,7 @@
     <Resource Include="exit-icon.png" />
     <Resource Include="expenses.png" />
     <Resource Include="fuel-icon.png" />
+    <Resource Include="graph.png" />
     <Resource Include="groceries-icon.png" />
     <Resource Include="home-icon.png" />
     <Resource Include="lights-icon.png" />
